--- a/css/app.css
+++ b/css/app.css
@@ -18,7 +18,9 @@ img{
 /* PROJECT STYLE */
 .main-header{
     background-color: azure;
-    padding: 10px
+    padding: 10px;
+
+    
 }
 .container{
     margin: 0 auto;
@@ -42,10 +44,13 @@ img{
 .card{
     max-width: 800px;
     margin: auto;
+    padding: 20px;
+    border-radius: 10px;
 }
 .menu{
     background-color: white;
     padding: 20px;
+    border-bottom:blueviolet ridge
 }
 
 .bg-gray{
