--- a/css/app.css
+++ b/css/app.css
@@ -44,8 +44,9 @@ img{
 .card{
     max-width: 800px;
     margin: auto;
-    padding: 20px;
     border-radius: 10px;
+    padding: 20px 0px;
+
 }
 .menu{
     background-color: white;
@@ -53,9 +54,24 @@ img{
     border-bottom:blueviolet ridge
 }
 
-.bg-gray{
-    background-color: gray;
-}
 .bg-white{
     background-color: white;
+}
+
+.bg-gray{
+    background-color: rgb(206, 203, 203);
+    padding-top: 40px;
+}
+
+
+.label{
+    border-radius: 20%;
+    color: white;
+    padding: 3px;
+    background-color:chartreuse;
+    font-size: 10px;
+}
+
+.todolist{
+    padding: 20px;
 }
