--- a/css/app.css
+++ b/css/app.css
@@ -1,64 +1,92 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-html{
-    font-family: "Poppins" , sans-serif
+html {
+    font-family: "Poppins", sans-serif
 }
+
 /* RESET RULES */
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
-ul,ol{
+
+ul,
+ol {
     list-style: none;
 }
-img{
+
+img {
     max-width: 100%;
 }
+
 /* PROJECT STYLE */
-.main-header{
+.main-header {
     background-color: azure;
     padding: 10px;
 
-    
+
 }
-.container{
+
+.container {
     margin: 0 auto;
     max-width: 1200px;
 
 }
-.logo,.webapp-name{
+
+.logo,
+.webapp-name {
     vertical-align: middle;
 }
-.conteiner strong{
+
+.conteiner strong {
     font-size: 32px;
 }
 
-.button{
+.button {
     display: inline-block;
     border-radius: 10%;
     padding: 10px;
-    background-color: blue;
+
 }
 
-.card{
+.addtask {
+    background-color: rgb(95, 95, 233);
+    color: white;
+    border: solid;
+    border-color: rgb(95, 95, 233);
+}
+
+.addsection {
+    background-color: white;
+    color: rgb(194, 190, 190);
+    border-color: rgb(194, 190, 190);
+    border: solid;
+}
+
+
+
+.card {
     max-width: 800px;
     margin: auto;
     border-radius: 10px;
     padding: 20px 0px;
 
 }
-.menu{
+
+.menu {
     background-color: white;
     padding: 20px;
-    border-bottom:blueviolet ridge
+    border-bottom: rgb(200, 174, 224) ridge;
+    border-width: 1px;
+
 }
 
-.bg-white{
+.bg-white {
     background-color: white;
 }
 
-.bg-gray{
+.bg-gray {
     background-color: rgb(206, 203, 203);
     padding-top: 40px;
 }
@@ -66,32 +94,61 @@ img{
 /* list style */
 
 
-.todolist{
+.todolist {
     padding: 20px;
 }
 
-.label{
+.label {
     border-radius: 20%;
     color: white;
     padding: 5px;
     font-size: 10px;
 }
-.editorial{
+
+.editorial {
     background-color: rgb(43, 168, 240);
 }
 
-.goals{
+.goals {
     background-color: blue;
 }
-.recruiting{
+
+.recruiting {
     background-color: rgba(179, 104, 34, 0.993);
 }
-.mobile{
+
+.mobile {
     background-color: chocolate;
 }
-.website{
+
+.website {
     background-color: hotpink;
 }
-.sales{
+
+.sales {
     background-color: yellowgreen;
+}
+
+li {
+    margin-bottom: 10px;
+}
+
+.circle {
+    height: 25px;
+    width: 25px;
+
+    border-radius: 50%;
+
+    display: inline-block;
+    text-align: center;
+    border: 1px solid;
+}
+
+.checkmark {
+    color: rgb(24, 185, 24);
+    border-color: rgb(24, 185, 24);
+}
+.cross {
+    color: red;
+    border-color: red;
 }
